# bscribe

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-changelog.yml  release.yml
docker/: policy.xml
docs/: changelog.md  deployment.md  design.md  releasing.md
docs/adr/: 0001-pebble-worker-pool.md  0002-raw-sqlite3-persistence.md  0003-pipeline-fingerprint-canonicalization.md
docs/superpowers/specs/: 2026-07-05-ci-changelog-release-bootstrap-design.md
src/bscribe/: __init__.py  app.py  auth.py  cli.py  errors.py  log.py  maintenance.py  metrics.py  pipeline.py  runner.py  settings.py  uploads.py  workers.py
src/bscribe/adapters/: __init__.py  liteparse.py  sqlite.py
src/bscribe/api/: __init__.py  convert.py  info.py  jobs.py  responses.py  schemas.py  staging.py
src/bscribe/domain/: __init__.py  errors.py  formats.py  jobs.py  models.py  pipeline.py  ports.py  tokens.py
tests/integration/: __init__.py  conftest.py  test_convert.py  test_info.py  test_jobs.py  test_liteparse_adapter.py  test_pipeline.py  test_workers.py
tests/unit/: conftest.py  fakes.py  test_app.py  test_auth.py  test_cli.py  test_errors.py  test_log.py  test_maintenance.py  test_metrics.py  test_pipeline.py  test_runner.py  test_settings.py  test_uploads.py  test_workers.py
tests/unit/adapters/: __init__.py  test_liteparse.py  test_sqlite.py
tests/unit/api/: __init__.py  test_convert.py  test_info.py  test_jobs.py  test_responses.py
tests/unit/domain/: __init__.py  test_errors.py  test_formats.py  test_jobs.py  test_models.py  test_pipeline.py  test_ports.py  test_tokens.py
